@@ -2275,7 +2275,7 @@ name|newInstance
 argument_list|(
 name|systemMrid
 argument_list|,
-name|ivyRef
+name|systemMd
 operator|.
 name|getRevision
 argument_list|()
@@ -3936,6 +3936,23 @@ name|startsWith
 argument_list|(
 literal|"working@"
 argument_list|)
+operator|&&
+operator|!
+name|mrid
+operator|.
+name|getRevision
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+name|md
+operator|.
+name|getModuleRevisionId
+argument_list|()
+operator|.
+name|getRevision
+argument_list|()
+argument_list|)
 condition|)
 block|{
 name|ModuleRevisionId
@@ -3947,7 +3964,7 @@ name|newInstance
 argument_list|(
 name|mrid
 argument_list|,
-name|ivyRef
+name|mrid
 operator|.
 name|getRevision
 argument_list|()
