@@ -34043,6 +34043,90 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testNamespaceMapping5
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// Verifies that mapping version numbers works
+name|Ivy
+name|ivy
+init|=
+operator|new
+name|Ivy
+argument_list|()
+decl_stmt|;
+name|ivy
+operator|.
+name|configure
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/namespace/ivysettings.xml"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|ResolveReport
+name|report
+init|=
+name|ivy
+operator|.
+name|resolve
+argument_list|(
+name|ResolveTest
+operator|.
+name|class
+operator|.
+name|getResource
+argument_list|(
+literal|"ivy-namespace5.xml"
+argument_list|)
+argument_list|,
+name|getResolveOptions
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|"*"
+block|}
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|report
+argument_list|)
+expr_stmt|;
+name|ModuleRevisionId
+name|mrid
+init|=
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+literal|"systemorg3"
+argument_list|,
+literal|"systemmod3"
+argument_list|,
+literal|"1.0"
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|getIvyFileInCache
+argument_list|(
+name|mrid
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testIVY151
 parameter_list|()
 throws|throws
